--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
     background-color: rgb(0, 0, 0);
     margin: 0;
     padding: 0;
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
 }
 
 h1 {
